feat: publish bolt.gives v1.0.0

--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "bolt",
-  "description": "An AI Agent",
+  "name": "bolt.gives",
+  "productName": "bolt.gives",
+  "description": "bolt.gives collaborative AI agent",
   "private": true,
   "license": "MIT",
   "sideEffects": false,
   "type": "module",
   "version": "1.0.0",
   "author": {
-    "name": "bolt.diy team",
-    "email": "maintainers@bolt.diy"
+    "name": "bolt.gives team",
+    "email": "maintainers@bolt.gives"
   },
   "scripts": {
     "deploy": "npm run build && wrangler pages deploy",
     "build": "remix vite:build",
-    "dev": "node pre-start.cjs  && remix vite:dev",
+    "dev": "node pre-start.cjs && concurrently \"pnpm run collab:server\" \"remix vite:dev\" --names collab,app --kill-others-on-fail",
+    "collab:server": "node scripts/collaboration-server.mjs",
+    "setup": "node scripts/setup.mjs",
     "test": "vitest --run",
     "test:watch": "vitest",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint app",
@@ -108,6 +111,7 @@
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
+    "@y/websocket-server": "^0.1.1",
     "ai": "4.3.16",
     "chalk": "^5.4.1",
     "chart.js": "^4.4.7",
@@ -129,6 +133,7 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "jszip": "^3.10.1",
+    "lib0": "^0.2.117",
     "lucide-react": "^0.485.0",
     "mime": "^4.0.4",
     "nanostores": "^0.10.3",
@@ -158,6 +163,11 @@
     "unist-util-visit": "^5.0.0",
     "use-debounce": "^10.0.4",
     "vite-plugin-node-polyfills": "^0.22.0",
+    "ws": "^8.19.0",
+    "y-codemirror.next": "^0.3.5",
+    "y-protocols": "^1.0.7",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.29",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
