--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
         
       - name: Log in to GitHub Container Registry (optional)
-        if: ${{ secrets.GHCR_PAT != '' }}
+        if: ${{ vars.GHCR_PUSH_ENABLED == 'true' }}
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -64,13 +64,13 @@ jobs:
           # Keep publishing linux/amd64 so the workflow stays green; we can re-enable multi-arch once arm64 builds are stable.
           platforms: linux/amd64
           target: bolt-ai-production
-          push: ${{ secrets.GHCR_PAT != '' }}
+          push: ${{ vars.GHCR_PUSH_ENABLED == 'true' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           
           
       - name: Check manifest
-        if: ${{ success() && secrets.GHCR_PAT != '' }}
+        if: ${{ success() && vars.GHCR_PUSH_ENABLED == 'true' }}
         shell: bash
         run: |
           set -euo pipefail
