chore: prepare v1.0.1 release

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-# Code Owners for bolt.diy
+# Code Owners for bolt.gives
 # These users/teams will automatically be requested for review when files are modified
 
 # Global ownership - repository maintainers
