--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "deploy": "npm run build && wrangler pages deploy",
     "build": "remix vite:build",
     "build:highmem": "cross-env NODE_OPTIONS=--max-old-space-size=6142 remix vite:build",
-    "dev": "node pre-start.cjs && concurrently \"pnpm run collab:server\" \"remix vite:dev\" --names collab,app --kill-others-on-fail",
+    "dev": "node pre-start.cjs && concurrently \"pnpm run collab:server\" \"pnpm run webbrowse:server\" \"remix vite:dev\" --names collab,webbrowse,app --kill-others-on-fail",
     "collab:server": "node scripts/collaboration-server.mjs",
+    "webbrowse:server": "node scripts/web-browse-server.mjs",
     "setup": "node scripts/setup.mjs",
     "test": "vitest --run",
     "test:watch": "vitest",
@@ -32,6 +33,7 @@
     "typecheck": "cross-env NODE_OPTIONS=--max-old-space-size=4096 tsc --pretty false --incremental",
     "typegen": "wrangler types",
     "preview": "pnpm run build && pnpm run start",
+    "postinstall": "node scripts/install-playwright.mjs",
     "prepare": "husky",
     "clean": "node scripts/clean.js",
     "electron:dev": "node scripts/electron-dev.mjs",
@@ -140,6 +142,7 @@
     "nanostores": "^0.10.3",
     "ollama-ai-provider": "^0.15.2",
     "path-browserify": "^1.0.1",
+    "playwright": "^1.56.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
